src/pyyc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> PRINT expression
Rule 2     statement -> expression
Rule 3     vartype -> INTTYPE
Rule 4     vartype -> BOOLTYPE
Rule 5     typedef -> vartype VARNAME
Rule 6     statement -> typedef ASSIGN expression
Rule 7     statement -> VARNAME ASSIGN expression
Rule 8     expression -> VARNAME
Rule 9     expression -> CONST
Rule 10    expression -> UNARYSUB expression
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> LPAREN expression RPAREN
Rule 13    expression -> INPUT LPAREN RPAREN
Rule 14    key_datum -> expression COLON expression
Rule 15    subscription -> expression LSBRACK expression RSBRACK
Rule 16    expression -> TRUE
Rule 17    expression -> FALSE
Rule 18    expression -> NOT expression
Rule 19    expression -> expression AND expression
Rule 20    expression -> expression OR expression
Rule 21    expression -> expression EQEQ expression
Rule 22    expression -> expression NOTEQ expression
Rule 23    expression -> expression IF expression ELSE expression
Rule 24    expression -> LSBRACK expr_list RSBRACK
Rule 25    expression -> LCBRACK key_datum_list RCBRACK
Rule 26    expression -> subscription
Rule 27    expression -> expression IS expression
Rule 28    expr_list -> expression
Rule 29    expr_list -> expression COMMA expr_list
Rule 30    key_datum_list -> key_datum
Rule 31    key_datum_list -> key_datum COMMA key_datum_list
Rule 32    target -> subscription
Rule 33    statement -> target ASSIGN expression

Terminals, with rules where they appear

AND                  : 19
ASSIGN               : 6 7 33
BOOLTYPE             : 4
COLON                : 14
COMMA                : 29 31
CONST                : 9
ELSE                 : 23
EQEQ                 : 21
FALSE                : 17
IF                   : 23
INPUT                : 13
INTTYPE              : 3
IS                   : 27
LCBRACK              : 25
LPAREN               : 12 13
LSBRACK              : 15 24
NOT                  : 18
NOTEQ                : 22
OR                   : 20
PLUS                 : 11
PRINT                : 1
RCBRACK              : 25
RPAREN               : 12 13
RSBRACK              : 15 24
TRUE                 : 16
UNARYSUB             : 10
VARNAME              : 5 7 8
error                : 

Nonterminals, with rules where they appear

expr_list            : 24 29
expression           : 1 2 6 7 10 11 11 12 14 14 15 15 18 19 19 20 20 21 21 22 22 23 23 23 27 27 28 29 33
key_datum            : 30 31
key_datum_list       : 25 31
statement            : 0
subscription         : 26 32
target               : 33
typedef              : 6
vartype              : 5

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . PRINT expression
    (2) statement -> . expression
    (6) statement -> . typedef ASSIGN expression
    (7) statement -> . VARNAME ASSIGN expression
    (33) statement -> . target ASSIGN expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (5) typedef -> . vartype VARNAME
    (32) target -> . subscription
    (15) subscription -> . expression LSBRACK expression RSBRACK
    (3) vartype -> . INTTYPE
    (4) vartype -> . BOOLTYPE

    PRINT           shift and go to state 6
    VARNAME         shift and go to state 2
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12
    INTTYPE         shift and go to state 15
    BOOLTYPE        shift and go to state 11

    typedef                        shift and go to state 8
    target                         shift and go to state 17
    vartype                        shift and go to state 4
    statement                      shift and go to state 9
    expression                     shift and go to state 19
    subscription                   shift and go to state 10

state 1

    (9) expression -> CONST .

    PLUS            reduce using rule 9 (expression -> CONST .)
    AND             reduce using rule 9 (expression -> CONST .)
    OR              reduce using rule 9 (expression -> CONST .)
    EQEQ            reduce using rule 9 (expression -> CONST .)
    NOTEQ           reduce using rule 9 (expression -> CONST .)
    IF              reduce using rule 9 (expression -> CONST .)
    IS              reduce using rule 9 (expression -> CONST .)
    LSBRACK         reduce using rule 9 (expression -> CONST .)
    $end            reduce using rule 9 (expression -> CONST .)
    COMMA           reduce using rule 9 (expression -> CONST .)
    RSBRACK         reduce using rule 9 (expression -> CONST .)
    COLON           reduce using rule 9 (expression -> CONST .)
    RPAREN          reduce using rule 9 (expression -> CONST .)
    ELSE            reduce using rule 9 (expression -> CONST .)
    RCBRACK         reduce using rule 9 (expression -> CONST .)


state 2

    (7) statement -> VARNAME . ASSIGN expression
    (8) expression -> VARNAME .

    ASSIGN          shift and go to state 20
    PLUS            reduce using rule 8 (expression -> VARNAME .)
    AND             reduce using rule 8 (expression -> VARNAME .)
    OR              reduce using rule 8 (expression -> VARNAME .)
    EQEQ            reduce using rule 8 (expression -> VARNAME .)
    NOTEQ           reduce using rule 8 (expression -> VARNAME .)
    IF              reduce using rule 8 (expression -> VARNAME .)
    IS              reduce using rule 8 (expression -> VARNAME .)
    LSBRACK         reduce using rule 8 (expression -> VARNAME .)
    $end            reduce using rule 8 (expression -> VARNAME .)


state 3

    (24) expression -> LSBRACK . expr_list RSBRACK
    (28) expr_list -> . expression
    (29) expr_list -> . expression COMMA expr_list
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expr_list                      shift and go to state 22
    expression                     shift and go to state 24
    subscription                   shift and go to state 23

state 4

    (5) typedef -> vartype . VARNAME

    VARNAME         shift and go to state 25


state 5

    (10) expression -> UNARYSUB . expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expression                     shift and go to state 26
    subscription                   shift and go to state 23

state 6

    (1) statement -> PRINT . expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expression                     shift and go to state 27
    subscription                   shift and go to state 23

state 7

    (16) expression -> TRUE .

    PLUS            reduce using rule 16 (expression -> TRUE .)
    AND             reduce using rule 16 (expression -> TRUE .)
    OR              reduce using rule 16 (expression -> TRUE .)
    EQEQ            reduce using rule 16 (expression -> TRUE .)
    NOTEQ           reduce using rule 16 (expression -> TRUE .)
    IF              reduce using rule 16 (expression -> TRUE .)
    IS              reduce using rule 16 (expression -> TRUE .)
    LSBRACK         reduce using rule 16 (expression -> TRUE .)
    $end            reduce using rule 16 (expression -> TRUE .)
    COMMA           reduce using rule 16 (expression -> TRUE .)
    RSBRACK         reduce using rule 16 (expression -> TRUE .)
    COLON           reduce using rule 16 (expression -> TRUE .)
    RPAREN          reduce using rule 16 (expression -> TRUE .)
    ELSE            reduce using rule 16 (expression -> TRUE .)
    RCBRACK         reduce using rule 16 (expression -> TRUE .)


state 8

    (6) statement -> typedef . ASSIGN expression

    ASSIGN          shift and go to state 28


state 9

    (0) S' -> statement .



state 10

    (26) expression -> subscription .
    (32) target -> subscription .

    PLUS            reduce using rule 26 (expression -> subscription .)
    AND             reduce using rule 26 (expression -> subscription .)
    OR              reduce using rule 26 (expression -> subscription .)
    EQEQ            reduce using rule 26 (expression -> subscription .)
    NOTEQ           reduce using rule 26 (expression -> subscription .)
    IF              reduce using rule 26 (expression -> subscription .)
    IS              reduce using rule 26 (expression -> subscription .)
    LSBRACK         reduce using rule 26 (expression -> subscription .)
    $end            reduce using rule 26 (expression -> subscription .)
    ASSIGN          reduce using rule 32 (target -> subscription .)


state 11

    (4) vartype -> BOOLTYPE .

    VARNAME         reduce using rule 4 (vartype -> BOOLTYPE .)


state 12

    (25) expression -> LCBRACK . key_datum_list RCBRACK
    (30) key_datum_list -> . key_datum
    (31) key_datum_list -> . key_datum COMMA key_datum_list
    (14) key_datum -> . expression COLON expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    key_datum                      shift and go to state 29
    key_datum_list                 shift and go to state 30
    expression                     shift and go to state 31
    subscription                   shift and go to state 23

state 13

    (12) expression -> LPAREN . expression RPAREN
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expression                     shift and go to state 32
    subscription                   shift and go to state 23

state 14

    (13) expression -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 33


state 15

    (3) vartype -> INTTYPE .

    VARNAME         reduce using rule 3 (vartype -> INTTYPE .)


state 16

    (17) expression -> FALSE .

    PLUS            reduce using rule 17 (expression -> FALSE .)
    AND             reduce using rule 17 (expression -> FALSE .)
    OR              reduce using rule 17 (expression -> FALSE .)
    EQEQ            reduce using rule 17 (expression -> FALSE .)
    NOTEQ           reduce using rule 17 (expression -> FALSE .)
    IF              reduce using rule 17 (expression -> FALSE .)
    IS              reduce using rule 17 (expression -> FALSE .)
    LSBRACK         reduce using rule 17 (expression -> FALSE .)
    $end            reduce using rule 17 (expression -> FALSE .)
    COMMA           reduce using rule 17 (expression -> FALSE .)
    RSBRACK         reduce using rule 17 (expression -> FALSE .)
    COLON           reduce using rule 17 (expression -> FALSE .)
    RPAREN          reduce using rule 17 (expression -> FALSE .)
    ELSE            reduce using rule 17 (expression -> FALSE .)
    RCBRACK         reduce using rule 17 (expression -> FALSE .)


state 17

    (33) statement -> target . ASSIGN expression

    ASSIGN          shift and go to state 34


state 18

    (18) expression -> NOT . expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expression                     shift and go to state 35
    subscription                   shift and go to state 23

state 19

    (2) statement -> expression .
    (11) expression -> expression . PLUS expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . IF expression ELSE expression
    (27) expression -> expression . IS expression
    (15) subscription -> expression . LSBRACK expression RSBRACK

    $end            reduce using rule 2 (statement -> expression .)
    PLUS            shift and go to state 41
    AND             shift and go to state 36
    OR              shift and go to state 42
    EQEQ            shift and go to state 38
    NOTEQ           shift and go to state 40
    IF              shift and go to state 43
    IS              shift and go to state 39
    LSBRACK         shift and go to state 37


state 20

    (7) statement -> VARNAME ASSIGN . expression
    (8) expression -> . VARNAME
    (9) expression -> . CONST
    (10) expression -> . UNARYSUB expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . LPAREN expression RPAREN
    (13) expression -> . INPUT LPAREN RPAREN
    (16) expression -> . TRUE
    (17) expression -> . FALSE
    (18) expression -> . NOT expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression IF expression ELSE expression
    (24) expression -> . LSBRACK expr_list RSBRACK
    (25) expression -> . LCBRACK key_datum_list RCBRACK
    (26) expression -> . subscription
    (27) expression -> . expression IS expression
    (15) subscription -> . expression LSBRACK expression RSBRACK

    VARNAME         shift and go to state 21
    CONST           shift and go to state 1
    UNARYSUB        shift and go to state 5
    LPAREN          shift and go to state 13
    INPUT           shift and go to state 14
    TRUE            shift and go to state 7
    FALSE           shift and go to state 16
    NOT             shift and go to state 18
    LSBRACK         shift and go to state 3
    LCBRACK         shift and go to state 12

    expression                     shift and go to state 44
    subscription                   shift and go to state 23

state 21

    (8) expression -> VARNAME .

    PLUS            reduce using rule 8 (expression -> VARNAME .)
    AND             reduce using rule 8 (expression -> VARNAME .)
    OR              reduce using rule 8 (expression -> VARNAME .)
    EQEQ            reduce using rule 8 (expression -> VARNAME .)
    NOTEQ           reduce using rule 8 (expression -> VARNAME .)
    IF              reduce using rule 8 (expression -> VARNAME .)
    IS              reduce using rule 8 (expression -> VARNAME .)
    LSBRACK         reduce using rule 8 (expression -> VARNAME .)
    $end            reduce using rule 8 (expression -> VARNAME .)
    COMMA           reduce using rule 8 (expression -> VARNAME .)
    RSBRACK         reduce using rule 8 (expression -> VARNAME .)
    COLON           reduce using rule 8 (expression -> VARNAME .)
    RPAREN          reduce using rule 8 (expression -> VARNAME .)
    ELSE            reduce using rule 8 (expression -> VARNAME .)
    RCBRACK         reduce using rule 8 (expression -> VARNAME .)


state 22

    (24) expression -> LSBRACK expr_list . RSBRACK

    RSBRACK         shift and go to state 45


state 23

    (26) expression -> subscription .

    PLUS            reduce using rule 26 (expression -> subscription .)
    AND             reduce using rule 26 (expression -> subscription .)
    OR              reduce using rule 26 (expression -> subscription .)
    EQEQ            reduce using rule 26 (expression -> subscription .)
    NOTEQ           reduce using rule 26 (expression -> subscription .)
    IF              reduce using rule 26 (expression -> subscription .)
    IS              reduce using rule 26 (expression -> subscription .)
    LSBRACK         reduce using rule 26 (expression -> subscription .)
    $end            reduce using rule 26 (expression -> subscription .)
    COMMA           reduce using rule 26 (expression -> subscription .)
    RSBRACK         reduce using rule 26 (expression -> subscription .)
    COLON           reduce using rule 26 (expression -> subscription .)
    RPAREN          reduce using rule 26 (expression -> subscription .)
    ELSE            reduce using rule 26 (expression -> subscription .)
    RCBRACK         reduce using rule 26 (expression -> subscription .)


state 24

    (28) expr_list -> expression .
    (29) expr_list -> expression . COMMA expr_list
    (11) expression -> expression . PLUS expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . IF expression ELSE expression
    (27) expression -> expression . IS expression
    (15) subscription -> expression . LSBRACK expression RSBRACK

    RSBRACK         reduce using rule 28 (expr_list -> expression .)
    COMMA           shift and go to state 46
    PLUS            shift and go to state 41
    AND             shift and go to state 36
    OR              shift and go to state 42
    EQEQ            shift and go to state 38
    NOTEQ           shift and go to state 40
    IF              shift and go to state 43
    IS              shift and go to state 39
    LSBRACK         shift and go to state 37


state 25

    (5) typedef -> vartype VARNAME .

    ASSIGN          reduce using rule 5 (typedef -> vartype VARNAME .)


state 26

    (10) expression -> UNARYSUB expression .
    (11) expression -> expression . PLUS expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . IF expression ELSE expression
    (27) expression -> expression . IS expression
    (15) subscription -> expression . LSBRACK expression RSBRACK

    PLUS            reduce using rule 10 (expression -> UNARYSUB expression .)
    AND             reduce using rule 10 (expression -> UNARYSUB expression .)
    OR              reduce using rule 10 (expression -> UNARYSUB expression .)
    EQEQ            reduce using rule 10 (expression -> UNARYSUB expression .)
    NOTEQ           reduce using rule 10 (expression -> UNARYSUB expression .)
    IF              reduce using rule 10 (expression -> UNARYSUB expression .)
    IS              reduce using rule 10 (expression -> UNARYSUB expression .)
    LSBRACK         reduce using rule 10 (expression -> UNARYSUB expression .)
    $end            reduce using rule 10 (expression -> UNARYSUB expression .)
    COMMA           reduce using rule 10 (expression -> UNARYSUB expression .)
    RSBRACK         reduce using rule 10 (expression -> UNARYSUB expression .)
    COLON           reduce using rule 10 (expression -> UNARYSUB expression .)
    RPAREN          reduce using rule 10 (expression -> UNARYSUB expression .)
    ELSE            reduce using rule 10 (expression -> UNARYSUB expression .)
    RCBRACK         reduce using rule 10 (expression -> UNARYSUB expression .)

  ! PLUS            [ shift and go to state 41 ]
  ! AND             [ shift and go to state 36 ]
  ! OR              [ shift and go to state 42 ]
  ! EQEQ            [ shift and go to state 38 ]
  ! NOTEQ           [ shift and go to state 40 ]
  ! IF              [ shift and go to state 43 ]
  ! IS              [ shift and go to state 39 ]
  ! LSBRACK         [ shift and go to state 37 ]


state 27

    (1) statement -> PRINT expression .
    (11) expression -> expression . PLUS expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . IF expression ELSE expression
    (27) expression -> expression . IS expression
    (15) subscription -> expression . LSBRACK expression RSBRACK

    $end            reduce using rule 1 (statement -> PRINT expression .)
    PLUS            shift and go to state 41
    AND             shift and go to state 36
    OR              shift and go to state 42
    EQEQ            shift and go to state 38
    NOTEQ           shift and go to state 40
    IF              shift and go to state 43
    IS              shift and go to state 39
    LSBRACK         shift and go to state 37


state 28
